k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  namespace: smart-notes

spec:
  replicas: 3

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend-container

          image: smart-notes-backend

          imagePullPolicy: Never

          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              path: /health
              port: 5000

            initialDelaySeconds: 10
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /health
              port: 5000

            initialDelaySeconds: 5
            periodSeconds: 3

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "256Mi"
              cpu: "200m"
