k8s/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: smart-notes

spec:
  selector:
    app: frontend

  ports:
    - port: 3000
      targetPort: 3000
