k8s/postgres-service.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: smart-notes

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432
