k8s/services.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: smart-notes

spec:
  type: NodePort

  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30007
