k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: smart-notes-ingress
  namespace: smart-notes

spec:
  ingressClassName: nginx

  rules:

    - host: api.notes.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: backend-service

                port:
                  number: 5000

    - host: app.notes.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-service

                port:
                  number: 3000
